# PredictStructureApp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
app_specs/: PredictStructure.json  README
container/: Dockerfile.predict-structure  Dockerfile.predict-structure-all  Dockerfile.predict-structure-bvbrc  build-deps.sh  dev-run.sh  folding-from-base.def  predict-structure.def
cwl/: TEST_REPORT.md
cwl/jobs/: crambin-alphafold-report.yml  crambin-alphafold.yml  crambin-boltz.yml  crambin-chai-report.yml  crambin-chai.yml  crambin-esmfold-report.yml  crambin-esmfold.yml  crambin-multi-tool.yml  crambin-predict-esmfold-report.yml  crambin-predict-report.yml  test-predict-alphafold.yml  test-predict-auto.yml  test-predict-boltz-glycan.yml  test-predict-boltz-msa-file.yml  test-predict-boltz-msa.yml  test-predict-boltz-rna.yml  test-predict-boltz-smiles.yml  test-predict-boltz.yml  test-predict-chai-advanced.yml  test-predict-chai-constraints.yml  test-predict-chai-msa.yml  test-predict-chai.yml  test-predict-esmfold-batch.yml  test-predict-esmfold-fp16.yml  test-predict-esmfold.yml  test-predict-mmcif.yml  test-predict-multientity.yml
cwl/tools/: aggregate-results.cwl  alphafold.cwl  boltz.cwl  chai.cwl  esmfold.cwl  openfold.cwl  predict-structure.cwl  protein-compare-batch.cwl  protein-compare.cwl  rename-structure.cwl  select-structure.cwl
cwl/workflows/: alphafold-report.cwl  boltz-report-msa.cwl  boltz-report.cwl  chai-report.cwl  esmfold-report.cwl  multi-tool-comparison.cwl  openfold-report.cwl  predict-report.cwl  protein-structure-prediction.cwl
docs/: ACCEPTANCE_TESTING.md  CONTAINER_BUILD.md  CWL_WORKFLOWS.md  OUTPUT_NORMALIZATION.md  Phase1.md  Phase2.md  Phase3.md  TESTING_PLAN.md  TEST_COVERAGE.md  cwl-test-report-260329.2.md  tool-selection.md
predict_structure/: cli.py  config.py  converters.py  entities.py  normalizers.py  results.py  tools.yml
predict_structure/adapters/: __init__.py  alphafold.py  base.py  boltz.py  chai.py  esmfold.py  openfold.py
predict_structure/backends/: __init__.py  apptainer.py  cwl.py  docker.py  subprocess.py
scripts/: _colabfold_api_msa.py  _qa_predicates.py  generate_service_params.py  generate_test_msas.sh  instantiate_params.py  run_qa_case.py  runtime_summary.py
service-scripts/: App-PredictStructure.pl
test_data/: complex-chai.fasta  constraint.json  crambin-boltz.yaml  crambin-chai.fasta  debug_commands.sh  dna.fasta  esmfold-job.json  job-alphafold-cpu.yml  job-alphafold-cwl.yml  job-alphafold-multimer.yml  job-alphafold.yml  job-boltz-cwl.yml  job-boltz-msa-server.yml  job-boltz.yml  job-chai-cwl.yml  job-chai-msa-server.yml  job-chai.yml  job-esmfold-cpu-fp16.yml  job-esmfold-cwl.yml  job-esmfold.yml  large_protein.fasta  medium_protein.fasta  multimer.fasta  params_auto.json  params_boltz.json  params_esmfold.json  rna.fasta  template_hits.json  test_entity_matrix.sh
test_data/acceptance/: params_alphafold.json  params_chai.json  params_openfold.json  timing_baselines.json
test_data/msa/: crambin.a3m  large_protein.a3m  medium_protein.a3m
test_data/openfold_bench/: README.md  adenylate_kinase.fasta  crambin.fasta  gfp.fasta  lysozyme.fasta  msa_settings.yml  query_adenylate_kinase.json  query_all.json  query_crambin.json  query_gfp.json  query_lysozyme.json  query_precomputed.json  query_ubiquitin.json  runner.yml  ubiquitin.fasta
test_data/service_params/: README.md  alphafold_input_file.json  auto_input_file.json  boltz_input_file.json  boltz_msa_upload.json  chai_input_file.json  esmfold_input_file.json  esmfold_text_input.json  manual_boltz_test.json  openfold_input_file.json  tier1_boltz.expected.json  tier1_boltz.json  tier1_chai.expected.json  tier1_chai.json  tier1_esmfold.expected.json  tier1_esmfold.json  tier1_openfold.expected.json  tier1_openfold.json  tier2_boltz.expected.json  tier2_boltz.json  tier2_chai.expected.json  tier2_chai.json  tier2_esmfold.expected.json  tier2_esmfold.json  tier2_openfold.expected.json  tier2_openfold.json  tier3_boltz.expected.json  tier3_boltz.json  tier3_chai.expected.json  tier3_chai.json  tier3_openfold.expected.json  tier3_openfold.json  tier4_boltz.expected.json  tier4_boltz.json  tier4_chai.expected.json  tier4_chai.json  tier4_esmfold.expected.json  tier4_esmfold.json  tier4_openfold.expected.json  tier4_openfold.json  (+6 more)
tests/: ACCEPTANCE.260331.md  conftest.py  gpu_acceptance_test.sh  run_cwl_tests.sh  test_adapters.py  test_apptainer_backend.py  test_apptainer_container.sh  test_cli.py  test_config.py  test_converters.py  test_cwl_acceptance.py  test_cwl_backend.py  test_cwl_tool.py  test_entities.py  test_normalizers.py  test_results.py  validate_output.sh
tests/acceptance/: RESULTS.md  conftest.py  matrix.py  test_cwl_workflow_execution.py  test_failure_modes.py  test_layout_parity.py  test_phase1_native_tools.py  test_phase2_auto_selection.py  test_phase2_cli_integration.py  (+10 more)
(+21 files in other folders)
